--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
-APP_NAME=Laravel
+APP_NAME="Eastnetic Test"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:7cB9J0yC50G4ouly6ZVdi3JvTr5yKMkfTvmkLxjx6DM=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://local.eastnetic-test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_PORT=5432
+DB_DATABASE=eastnetictest
+DB_USERNAME=postgres
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,6 +24,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
+REDIS_CLIENT=predis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
