--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+CACHE_TIMEOUT_SECONDS=60
+DEFAULT_PAGINATE=20
